# exercise-6-dennis_tristan_mark

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  error_3d.cpp  test_poisson.cpp
.circleci/: config.yml
cmake/: check_mpi_vendor.cmake
common/: equals.h  scalar.h  space_dimension.h
discretization/: error.h  heat.h  poisson.h
grid/: grid.cpp  grid.h  gridfunction.h  io.h  multiindex.cpp  multiindex.h  point.cpp  point.h
linear_algebra/: contiguousparallelpartition.cpp  contiguousparallelpartition.h  exchangedata.h  exchangepattern.cpp  exchangepattern.h  matrix.h  operations.cpp  operations.h  vector.h
python/: heat_equation.py  heat_equation_difference_solution.py  module.cpp  mpi_comm_wrapper.cpp  mpi_comm_wrapper.h  pyiterativesolver.h  pypreconditioner.h  pysolver.h
python/exercise3/: exercise-3.py
python/exercise5/: Exercise-5.md  heat_equation.py  heat_equation_difference_solution.py
python/exercise6/: Exercise-6.md  gaussian_hill.py  gaussian_hill_animation.ogv  gaussian_hill_with_height.ogv
python/exercise6/vts_files/: gaussian_hill_10_timesteps_30_grid_0_master.pvts  gaussian_hill_10_timesteps_30_grid_0_processor0.vts  gaussian_hill_10_timesteps_30_grid_10_master.pvts  gaussian_hill_10_timesteps_30_grid_10_processor0.vts  gaussian_hill_10_timesteps_30_grid_1_master.pvts  gaussian_hill_10_timesteps_30_grid_1_processor0.vts  gaussian_hill_10_timesteps_30_grid_2_master.pvts  gaussian_hill_10_timesteps_30_grid_2_processor0.vts  gaussian_hill_10_timesteps_30_grid_3_master.pvts  gaussian_hill_10_timesteps_30_grid_3_processor0.vts  gaussian_hill_10_timesteps_30_grid_4_master.pvts  gaussian_hill_10_timesteps_30_grid_4_processor0.vts  gaussian_hill_10_timesteps_30_grid_5_master.pvts  gaussian_hill_10_timesteps_30_grid_5_processor0.vts  gaussian_hill_10_timesteps_30_grid_6_master.pvts  gaussian_hill_10_timesteps_30_grid_6_processor0.vts  gaussian_hill_10_timesteps_30_grid_7_master.pvts  gaussian_hill_10_timesteps_30_grid_7_processor0.vts  gaussian_hill_10_timesteps_30_grid_8_master.pvts  gaussian_hill_10_timesteps_30_grid_8_processor0.vts  gaussian_hill_10_timesteps_30_grid_9_master.pvts  gaussian_hill_10_timesteps_30_grid_9_processor0.vts
python/exercise8/: error_2d.py  error_3d.py
solvers/: cg.h  gauss_seidel.txt  gauss_seidel_iteration.h  jacobi_iteration.h  preconditioner.h  richardson.h  solver.h
tests/: CMakeLists.txt  exchangedata.cpp  exchangepattern.cpp  grid.cpp  matrix.cpp  operations.cpp  parallel_matrix.cpp  parallel_operations.cpp  parallel_partition.cpp  parallel_vector.cpp  poisson.cpp  solvers.cpp  vector.cpp
